crates/hird-check/tests/snapshots/supervisors__malformed_child_spec.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 5,\n  period: 60,\n  children: [\n    { id: planner, actor: Planner, restart: permanent, bogus: 1 },\n  ]\n}\"))"
---
error[C0046] 999..1065: a child of supervisor `Sup` is missing its `start_args` field
error[C0046] 1054..1063: a child of supervisor `Sup` has no field `bogus`; expected `id`, `actor`, `start_args`, or `restart`
supervisor Sup ! {Tool<ReadRepo>}
