crates/hird-check/tests/snapshots/supervisors__stand_contributes_stand_effect.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}fn serve() ! {{Supervise, Stand}} = let u = supervise(PlannerSup) in stand()\\n\\\n         fn quiet() ! {{}} = stand()\")))"
---
error[C0030] 1285..1293: declared {} but body performs {Stand}
supervisor PlannerSup ! {Tool<ReadRepo>}
