crates/hird-check/tests/snapshots/supervisors__start_args_type_mismatch.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 5,\n  period: 60,\n  children: [\n    { id: planner, actor: Planner, start_args: Path(\\\"x\\\"), restart: permanent },\n  ]\n}\"))"
---
error[C0001] 1124..1134: type mismatch: expected `St`, got `Path`
supervisor Sup ! {Tool<ReadRepo>}
