crates/hird-check/tests/snapshots/supervisors__supervise_declared_supervisor.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}fn boot() ! {{Supervise}} = supervise(PlannerSup)\")))"
---
supervisor PlannerSup ! {Tool<ReadRepo>}
