crates/hird-check/tests/snapshots/supervisors__supervise_effect_is_required_in_row.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(&format!(\"{PLANNER_SUP}fn boot() ! {{}} = supervise(PlannerSup)\")))"
---
error[C0030] 1129..1151: declared {} but body performs {Supervise}
supervisor PlannerSup ! {Tool<ReadRepo>}
