crates/hird-check/tests/snapshots/supervisors__supervise_unknown_supervisor.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"fn boot() ! {Supervise} = supervise(GhostSup)\"))"
---
error[C0052] 950..958: `GhostSup` is not a declared supervisor
