crates/hird-check/tests/snapshots/supervisors__unknown_and_duplicate_fields.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: one_for_one,\n  intensity: 5,\n  intensity: 6,\n  period: 60,\n  bogus: 1,\n  children: []\n}\"))"
---
error[C0046] 974..983: supervisor `Sup` declares `intensity` twice
error[C0046] 1004..1009: supervisor `Sup` has no field `bogus`; expected `strategy`, `intensity`, `period`, or `children`
supervisor Sup ! {}
