crates/hird-check/tests/snapshots/supervisors__unknown_strategy_rejected.snap
---
source: crates/hird-check/tests/supervisors.rs
expression: "check_str(&with_prelude(\"supervisor Sup {\n  strategy: all_for_one,\n  intensity: 5,\n  period: 60,\n  children: []\n}\"))"
---
error[C0046] 956..967: supervisor `Sup` has unknown restart strategy `all_for_one`; expected `one_for_one`, `one_for_all`, or `rest_for_one`
supervisor Sup ! {}
